--- a/app/src/main/res/drawable/ic_after_save_tune.xml
+++ b/app/src/main/res/drawable/ic_after_save_tune.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/_20sdp"
-    android:height="@dimen/_20sdp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="32"
     android:viewportHeight="32">
   <path
