--- a/app/src/main/res/drawable/left_shape.xml
+++ b/app/src/main/res/drawable/left_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/_30sdp"
-    android:height="@dimen/_30sdp"
+    android:width="32dp"
+    android:height="32dp"
     android:viewportWidth="1472"
     android:viewportHeight="1484">
     <!-- Second shape -->
